update with lock endpoints
