# internal/api/router.go
@@ -31,11 +31,15 @@ func NewRouter(r *reader.Reader, salt string) *chi.Mux {
 
 	// MD5 Endpoints
 	router.Post("/api/v1/card/1/read-decoded", cardHandlers.ReadDecodedMD5)
+	router.Post("/api/v1/card/1/read-decoded-locked", cardHandlers.ReadDecodedLockedMD5)
 	router.Post("/api/v1/card/1/write-encoded", cardHandlers.WriteEncodedMD5)
+	router.Post("/api/v1/card/1/write-encoded-locked", cardHandlers.WriteEncodedLockedMD5)
 
 	// SHA256 Endpoints
 	router.Post("/api/v1/card/2/read-decoded", cardHandlers.ReadDecodedSHA)
+	router.Post("/api/v1/card/2/read-decoded-locked", cardHandlers.ReadDecodedLockedSHA)
 	router.Post("/api/v1/card/2/write-encoded", cardHandlers.WriteEncodedSHA)
+	router.Post("/api/v1/card/2/write-encoded-locked", cardHandlers.WriteEncodedLockedSHA)
 
 	// Device operations
 	deviceHandlers := handlers.NewDeviceHandlers(r)
